@@ -146,4 +146,17 @@ public class Foo {
 }
      ]]></code>
     </test-code>
+    <test-code>
+        <description>Bug #1047 False Positive in 'for' loops for LocalVariableCouldBeFinal in 5.0.1</description>
+        <expected-problems>0</expected-problems>
+        <code><![CDATA[
+public class Foo {
+ public void bar() {
+  for ( final String c : strings ) {
+   System.out.println(c); // use c
+  }
+ }
+}
+        ]]></code>
+    </test-code>
 </test-data>
